# goit-pythonweb-hw-03

./: .gitignore  README.md  pyproject.toml
templates/: index.html  message.html
